# prototype

./: .dockerignore  .gitignore  docker-compose.yaml  init_db.sql  new_service.py  regenerate_migrations.py
gateway/: Dockerfile  pyproject.toml
gateway/src/: config.py  main.py
gateway/src/core/: nats_client.py  security.py
gateway/src/graphql/: inputs.py  resolvers.py  schema.py  types.py
proto/: audit.proto  rbac.proto
seed/: pyproject.toml  seed.py
seeder/: Dockerfile  pyproject.toml  seed.py
services/appointments_service/: .env  Dockerfile  alembic.ini  pyproject.toml
services/appointments_service/database/migrations/: env.py
services/appointments_service/src/: config.py  database.py  main.py  models.py
services/appointments_service/src/handlers/: appointment_handler.py
services/appointments_service/src/services/: appointment_service.py  schedule_service.py
services/appoitment_service/: .env
services/appoitment_service/src/: config.py  models.py
services/appoitment_service/src/database/: appointments.db
services/appoitment_service/src/services/: appointment_service.py
services/audit_service/: .env  Dockerfile  alembic.ini  pyproject.toml
services/audit_service/database/: audit.db
services/audit_service/database/migrations/: env.py
services/audit_service/src/: broker.py  config.py  database.py  main.py  models.py
services/audit_service/src/services/: log_service.py
services/auth_service/: .env  Dockerfile  pyproject.toml
services/auth_service/app/: config.py  main.py  models.py  schemas.py
services/auth_service/app/api/v1/endpoints/: auth.py  health.py
services/auth_service/app/core/: redis.py  security.py
services/auth_service/app/db/: database.py
services/auth_service/app/models/: user.py
services/auth_service/app/schemas/: auth.py
services/auth_service/app/services/: auth_service.py  clinic_config_client.py  redis_token_manager.py
services/auth_service/src/: config.py  main.py  session_manager.py
services/auth_service/tests/: conftest.py  test_auth.py
services/clinic_config_service/: .coverage  .env  Dockerfile  aerich.ini  init_data.py  pyproject.toml
services/clinic_config_service/app/: config.py  main.py  models.py  schemas.py
services/clinic_config_service/app/api/v1/endpoints/: clinics.py  health.py  organizations.py  roles.py  users.py
services/clinic_config_service/app/db/: __init__.py  database.py
services/clinic_config_service/app/services/: clinic_service.py  organization_service.py  role_service.py  user_service.py
services/clinic_config_service/migrations/models/: 0_20251117140614_init.py
services/clinic_config_service/tests/: conftest.py  test_clinics.py  test_health.py  test_organizations.py  test_roles.py  test_users.py
services/ehr_service/: .env  Dockerfile  alembic.ini  main.py  pyproject.toml
services/ehr_service/database/: ehr.db
services/ehr_service/database/migrations/: env.py
services/ehr_service/src/: config.py  database.py  main.py  models.py
services/ehr_service/src/handlers/: ehr_handler.py
services/ehr_service/src/services/: ehr_service.py
services/integration_service/: .env  Dockerfile  alembic.ini  pyproject.toml
services/integration_service/database/: billing.db
services/integration_service/database/migrations/: env.py
services/integration_service/src/: config.py  database.py  main.py  models.py
services/integration_service/src/handlers/: billing_handler.py
services/notification_service/: .env  Dockerfile  alembic.ini  pyproject.toml
services/notification_service/database/: notification.db
services/notification_service/database/migrations/: env.py
services/notification_service/database/migrations/versions/: 098a8f6e03cf_initial_notification_schema.py  9744aaaedfc4_initial_postgres_migration.py
services/notification_service/src/: config.py  database.py  main.py  models.py
services/notification_service/src/handlers/: notification_handler.py
services/notification_service/src/services/: notification_service.py
services/patient_service/: .env  Dockerfile  alembic.ini  pyproject.toml
services/patient_service/database/: patients.db
services/patient_service/database/migrations/versions/: ad632f340f91_initial_postgres_migration.py  ffc27f73a49e_made_user_id_column_in_patient_table_.py
services/patient_service/src/: config.py  database.py  main.py  models.py
services/patient_service/src/database/: patients.db
services/patient_service/src/database/migrations/: env.py
services/patient_service/src/database/migrations/versions/: 5ed8c145ee84_initial_patient_schema.py  bda9fac8626c_initial_patient_schema.py
services/patient_service/src/handlers/: patient_handler.py
services/patient_service/src/services/: patient_service.py
services/rbac_service/: .dockerignore  .env  Dockerfile  README.md  alembic.ini  pyproject.toml  shared
services/rbac_service/database/: rbac.db
services/rbac_service/database/migrations/: env.py
services/rbac_service/database/migrations/versions/: 780101f88d36_initial_migration.py  c327080f735f_initial_postgres_migration.py
services/rbac_service/src/: broker.py  config.py  database.py  main.py  models.py
services/rbac_service/src/handlers/: clinic_handler.py  department_handler.py  location_handler.py  role_handler.py  user_handler.py
services/rbac_service/src/services/: clinic_service.py  department_service.py  location_service.py  role_service.py  user_service.py
services/reporting_service/: .env  Dockerfile  alembic.ini  pyproject.toml
services/reporting_service/database/: reporting.db
services/reporting_service/database/migrations/: env.py
services/reporting_service/database/migrations/versions/: 61b4454b8a83_initial_reporting_schema.py  f0b5c3bcf987_initial_postgres_migration.py
services/reporting_service/src/: config.py  database.py  main.py  models.py
services/reporting_service/src/handlers/: reporting_handler.py
services/reporting_service/src/services/: reporting_service.py
shared/: messages.py  pyproject.toml
shared/shared_messages.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+7 files in other folders)
