[project]
name = "gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.3",
    "grpcio>=1.76.0",
    "pydantic[email]>=2.12.4",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.76.0",
]
