[project]
name = "seeder"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faker>=38.2.0",
    "faststream[nats]>=0.6.3",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "shared-messages",
]

[tool.uv.sources]
shared-messages = { path = "../shared", editable = true }
