[project]
name = "auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faststream[nats]>=0.6.3",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "rich>=14.2.0",
    "toml>=0.10.2",
]

[tool.ruff]
line-length = 72
pydocstyle.convention = "google"
