[project]
name = "patient-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "faststream[nats]>=0.6.3",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "alembic>=1.17.2",
    "ruff>=0.14.6",
]
