[project]
name = "rbac-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faststream[nats]>=0.6.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.12.4",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "alembic>=1.17.2",
    "deptry>=0.24.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]
