[project]
name = "reporting-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "faststream[nats]>=0.6.3",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "shared-messages",
    "sqlalchemy>=2.0.44",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "alembic>=1.17.2",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool.uv.sources]
shared-messages = { path = "../../shared", editable = true }
